# loreport

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: docker-publish.yml
backend/: README.md  pyproject.toml
backend/loreport_core/: README.md  __init__.py  claim_extract.py  compile_markers.py  constants.py  doc_pattern.py  drift_classify.py  drift_parse.py  drift_sync.py  human_doc_compile.py  integrity.py  language.py  prompts.py  scope.py  types.py  verification_convergence.py  verification_parse.py  workflow.py
backend/loreport_core/agent/: __init__.py  runner.py  subagents.py
backend/loreport_core/git/: __init__.py  evidence.py
backend/loreport_core/snapshot/: __init__.py
backend/loreport_server/: config.py
backend/loreport_server/api/: main.py
backend/loreport_server/api/routes/: docs.py  settings.py  sync.py  webhooks.py
backend/loreport_server/db/: models.py  session.py
backend/loreport_server/queue/: local.py  publisher.py
backend/loreport_server/worker/: consumer.py  jobs.py  recovery.py
backend/tests/: test_health.py
docker/: Dockerfile  compose.loreport.yaml  docker-compose.distributed.yml  docker-compose.yml
docs/: AGENT-WORKFLOW.md  ARCHITECTURE.md  AUDIT.md  CONTEXT.md  MVP.md  OPENWIKI-ADAPTATION.md  ROADMAP.md  VISION.md
loreport/: .last-update.json  architecture.md  domain.md  operations.md  quickstart.md  source-map.md  testing.md  workflows.md
scripts/: docker-build.sh  docker-publish.sh  vendor-python-wheels.sh
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+5 files in other folders)
