[project]
name = "loreport"
version = "0.1.6"
description = "Sidecar service for living engineering lore"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.6.0",
  "markdown>=3.7",
  "deepagents>=0.6.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openrouter>=0.1.0",
  "langchain-quickjs>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loreport_core", "loreport_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
